# settlement

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .output.txt  .snyk  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DONE_CRITERIA.md  Dockerfile  EDGE_CASE.md  HARNESS.md  LICENSE  PLAN.md  PORTFOLIO.md  README.md  SEQUENCE-DIAGRAM.md  SOUL.md  SPEC.md  STATUS.md  STRUCTURE.md  bash.exe.stackdump  build.gradle.kts  docker-compose-with-volumes.yml  docker-compose.yml  domain.md  generate_docs.py  gradle.properties  nginx.conf  polyglot-services.md  settings.gradle  settings.gradle.kts  settlement-service.md  update_docs.py
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
.omc/: project-memory.json
.ouroboros/: mechanical.toml
account-service/: build.gradle.kts
ai-service/: build.gradle.kts
bibe/: BIBE-VIEW.md  BIBE.md
docs/: ARCHITECTURE.md  (+54 more)
forecast-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
forecast-service/data/: demo_settlement_daily.csv
forecast-service/src/forecast_service/: __init__.py  app.py  config.py  demo_data.py  logging_config.py  main.py  metrics.py  models.py  schemas.py  service.py  types.py
forecast-service/tests/: test_api.py  test_metrics.py  test_models.py  test_service.py
screening-backtest-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
screening-backtest-service/data/: sample_backtest.json
screening-backtest-service/src/screening_backtest/: __main__.py  config.py
screening-backtest-service/src/screening_backtest/api/: app.py  schemas.py
screening-backtest-service/src/screening_backtest/core/: __init__.py  backtest.py  engine.py  trade_plan.py
screening-backtest-service/tests/: test_api.py  test_backtest.py  test_trade_plan.py
settlement-anomaly-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
settlement-anomaly-service/data/: sample_demo.json  sample_train.json
settlement-anomaly-service/src/anomaly_service/: __init__.py  __main__.py  config.py  logging_config.py  sample_data.py  schemas.py  service.py
settlement-anomaly-service/src/anomaly_service/api/: app.py
settlement-anomaly-service/src/anomaly_service/model/: detector.py  features.py
settlement-anomaly-service/tests/: conftest.py  test_api.py  test_detector.py  test_features.py
(+4044 files in other folders)
