[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast-service"
version = "0.1.0"
description = "Time-series forecasting of settlement amount / revenue for the CEO dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "statsmodels==0.14.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pydantic==2.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "httpx==0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
