[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "settlement-anomaly-service"
version = "0.1.0"
description = "Anomaly / fraud scoring on settlement & payout records (FastAPI + scikit-learn)."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "scikit-learn==1.6.0",
    "numpy==2.2.1",
    "pandas==2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[project.scripts]
anomaly-service = "anomaly_service.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
